# pet-exhibition

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/domain/animal/: entity.py
src/domain/animal/cat/: entity.py  enum.py
src/domain/animal/cat/value_objects/: cat_id.py
src/domain/animal/common/: aggregate.py
src/domain/cat/: entity.py  enum.py
src/domain/common/: breed.py  entity.py  value_object.py
src/domain/common/entity/: aggregate_root.py  entity.py
src/domain/enums/: breed.py  color.py
src/domain/exhibition/: entity.py
src/domain/exhibition/cat/: entity.py
src/domain/exhibition/cat/value_objects/: exhibition_id.py
src/domain/exhibition/common/: aggregate.py
tests/unit/: conftest.py
tests/unit/domain/cat/: test_create_cat.py
tests/unit/domain/exhibition/: test_create_exhibition.py
tests/unit/domain/exhibition/cat/: test_create_cat_exhibition.py
