[tool.poetry]
name = "pet-exhibition"
version = "0.1.0"
description = ""
authors = ["rafailmdzdv <rafayt323@xmail.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
