[tool.poetry]
name = "pet-exhibition"
version = "0.1.0"
description = ""
authors = ["rafailmdzdv <rafayt323@xmail.ru>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.7"
pytest = "^8.1.1"
flake8-aaa = "^0.17.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"